# mead

./: .aliases.sh  meson.build
doc/: Expressions.txt
include/mead/: ASTNode.h  BasicBlock.h  Compiler.h  Formattable.h  Function.h  Instruction.h  IntermediateInstruction.h  LLVMInstruction.h  LLVMType.h  LLVMValue.h  Lexer.h  Logging.h  Namespace.h  NamespacedName.h  Parser.h  Program.h  QualifiedName.h  QualifiedType.h  Scope.h  Signature.h  Symbol.h  Token.h  Type.h  TypeDB.h  Util.h  Value.h  Variable.h
include/mead/error/: ResolutionError.h  TypeError.h
include/mead/expr/: Expression.h  FunctionCall.h
include/mead/node/: Binary.h  Block.h  Dereference.h  Expression.h  FunctionCall.h  GetAddress.h  Identifier.h  Number.h  Return.h  Statement.h  TypeNode.h  VariableDefinition.h
include/mead/util/: Demangle.h  WeakSet.h
src/: ASTNode.cpp  BasicBlock.cpp  Compiler.cpp  Function.cpp  Instruction.cpp  IntermediateInstruction.cpp  LLVMInstruction.cpp  LLVMType.cpp  LLVMValue.cpp  Lexer.cpp  Namespace.cpp  NamespacedName.cpp  Parser.cpp  Program.cpp  QualifiedName.cpp  QualifiedType.cpp  Scope.cpp  Symbol.cpp  Token.cpp  Type.cpp  TypeDB.cpp  Value.cpp  Variable.cpp  main.cpp  meson.build
src/error/: TypeError.cpp
src/expr/: FunctionCall.cpp
src/node/: Binary.cpp  Block.cpp  Dereference.cpp  FunctionCall.cpp  GetAddress.cpp  Identifier.cpp  Number.cpp  Return.cpp  Statement.cpp  TypeNode.cpp  VariableDefinition.cpp
src/util/: Demangle.cpp
